Bug 33448 - [bisected] Incorrect image positioning
Summary: [bisected] Incorrect image positioning
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: xcb backend (show other bugs)
Version: 1.10.3
Hardware: Other Linux (All)
: medium normal
Assignee: Uli Schlachter
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-24 20:50 UTC by ojab
Modified: 2011-01-25 03:24 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
screenshot without error (36.84 KB, image/png)
2011-01-24 20:51 UTC, ojab
Details
Screenshot with error (20.22 KB, image/png)
2011-01-24 20:51 UTC, ojab
Details

Description ojab 2011-01-24 20:50:32 UTC
See screenshots in the attached files
cairo-git built with --enable-xlib-xcb --enable-xcb --enable-gl --enable-qt --enable-vg --enable-tee

Bisected to 
bef8b28300ab1f9b46db9d54b072f6f9318dca30 is the first bad commit

Previous revision ff9e962165905f9b3477e125de227c69aebf9510 works fine.
Comment 1 ojab 2011-01-24 20:51:23 UTC
Created attachment 42430 [details]
screenshot without error
Comment 2 ojab 2011-01-24 20:51:53 UTC
Created attachment 42431 [details]
Screenshot with error
Comment 3 Andrea Canciani 2011-01-25 03:24:09 UTC
Sorry for the inconvenience, it should now be fixed in cairo/master:

commit f60e8f0bb231547ff473dd23807193c847c99a3d
Author: Andrea Canciani <ranma42@gmail.com>
Date:   Tue Jan 25 08:41:27 2011 +0100

    xcb: Fix compositing of pixel-aligned rectangles
    
    bef8b28300ab1f9b46db9d54b072f6f9318dca30 introduced a regression in
    the compositing of pixel-aligned rectangles, because it only
    translates the destination, instead of destination, source and mask,
    by the extents offset.
    
    The same commit introduces some memleaks when the acquisition of an
    xcb picture fails.
    
    74374fce9d71d373287cddc3a0bf4aaf4bda568b causes incorrect rendering
    whenever extents are not tight.
    
    Fixes https://bugs.freedesktop.org/show_bug.cgi?id=33448


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.