xcb: Fix compositing of pixel-aligned rectangles

bef8b28300ab1f9b46db9d54b072f6f9318dca30 introduced a regression in
the compositing of pixel-aligned rectangles, because it only
translates the destination, instead of destination, source and mask,
by the extents offset.

The same commit introduces some memleaks when the acquisition of an
xcb picture fails.

74374fce9d71d373287cddc3a0bf4aaf4bda568b causes incorrect rendering
whenever extents are not tight.

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=33448